src/objects/Commission_Plan_Split__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Split__c</fullName>
        <label>Agent Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Plan__c</fullName>
        <label>Commission Plan</label>
        <referenceTo>Commission_Plan__c</referenceTo>
        <relationshipLabel>Splits</relationshipLabel>
        <relationshipName>Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Commission_From__c</fullName>
        <label>Gross Commission From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Commission_To__c</fullName>
        <label>Gross Commission To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Plan Split</label>
    <nameField>
        <displayFormat>Split-{0000}</displayFormat>
        <label>Split Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Plan Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>